--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,242 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; overflow: hidden; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import "~@angular/cdk/overlay-prebuilt.css";
+body{
+    color: #9A9A9A;
+    font-weight: 400;
+    font-size: 0.583333rem;
+    letter-spacing: normal;
+    line-height: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 0;
+    font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif;
+    margin-top: 0 !important;
+}
+
+h1 {
+    color: #000;
+    font-weight: 200;
+    font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif;
+    font-size: 2em;
+    letter-spacing: normal;
+    line-height: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 0; 
+}
+  
+h2 {
+    color: #000;
+    font-weight: 200;
+    font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif;
+    font-size: 1.166667rem;
+    letter-spacing: normal;
+    line-height: 2rem;
+    margin-top: 1rem;
+    margin-bottom: 0; 
+}
+
+h3 {
+/***color: #000;*/
+    color:white;
+    font-weight: 200;
+    font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif;
+    font-size: 0.916667rem;
+    letter-spacing: normal;
+    line-height: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 0; 
+}
+
+h4 {
+    color: #000;
+    font-weight: 200;
+    font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif;
+    font-size: 0.75rem;
+    letter-spacing: normal;
+    line-height: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 0; 
+}
+
+h5 {
+    color: #565656;
+    font-weight: 400;
+    font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif;
+    font-size: 0.666667rem;
+    letter-spacing: 0.01em;
+    line-height: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 0; 
+}
+
+h6 {
+    font-weight: 500;
+    font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif;
+    font-size: 0.583333rem;
+    letter-spacing: normal;
+    line-height: 1rem;
+    margin-top: 1rem;
+    margin-bottom: 0;
+    color: #313131; 
+}
+
+textarea:focus {
+    outline: none !important;
+    border-color: none !important;
+    box-shadow: none !important;
+}
+input:focus {
+    outline: none !important;
+    border-color: none;
+    box-shadow: none;
+}
+button:focus {
+    outline: none !important;
+    border-color: none;
+    box-shadow: none;
+}
+
+/* .flex-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: stretch;
+    align-items: flex-start;
+    padding-top: 0px;
+}
+
+.flex-container-row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-content: stretch;
+    align-items: flex-start;
+    align-self: stretch;
+}
+
+.flex-container-between {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-content: stretch;
+    align-items: flex-start;
+    align-self: stretch;
+}
+
+.flex-item-normal {
+    order: 0;
+    flex: 1 1 auto;
+    align-self: stretch;
+} */
+
+/* width */
+::-webkit-scrollbar {
+    height: 9px;
+    width: 9px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+::-webkit-scrollbar-corner {
+    background: transparent;
+}
+
+/* Hotkeys Dialog custom css */
+.hotkeys-custom-dialog .mat-dialog-container {
+    background-color: rgba(33, 33, 33, 1.0);
+    color: #cecece;
+    overflow-y: hidden !important;
+}
+.hotkeys-custom-dialog .mat-dialog-content {
+    max-height: 100%;
+}
+
+.control-box-custom-dialog .mat-dialog-container {
+    background: #212121;
+    padding: 0px;
+}
+
+.mat-tooltip.tooltip {
+    background: #212121;
+    border: gray 1px solid;
+    color: dodgerblue;
+    font-size: 12px;
+    font-weight: bold;
+}
+
+/* Worklist Filter Dialog custom css */
+.filter-text-dialog .mat-dialog-container {
+    overflow: hidden;
+    padding: 0px 20px;
+}
+.filter-text-dialog .mat-dialog-content {
+    margin: none;
+    padding: none;
+}
+
+/* About Lucas Dialog custom css */
+.about-dialog .mat-dialog-container {
+    background-color: #2d2d2d;
+}
+
+/* Common Dialog custom css */
+.common-dialog .mat-dialog-container {
+    background-color: #2d2d2d;
+    position: fixed;
+    left: calc(50vw - 150px);
+    top: calc(50vh - 100px);
+    width: unset;
+    height: unset;
+}
+
+.cdk-global-overlay-wrapper > .hotkeys-custom-dialog {
+    overflow: auto;
+}
+
+::ng-deep .cdk-overlay-container .cdk-overlay-pane .mat-menu-panel .mat-menu-content .mat-menu-item .mat-menu-ripple{
+    line-height: 30px;
+    border-radius: unset;
+    user-select: none;
+}
+
+button:focus {
+    outline: none;
+}
+
+.cdk-overlay-pane {
+    z-index: 10000 !important;
+}
+
+.modal-backdrop {
+    opacity: 0.3 !important;
+}
+
+.pl-10 {
+    padding-left: 10px;
+}
+.pl-20 {
+    padding-left: 20px;
+}
+
+.study-report-dialog .mat-dialog-container {
+    padding: 24px 0px;
+    max-height: calc(100vh - 70px);
+}
