create report image

--- a/src/app/webviewer-main/header/header.component.html
+++ b/src/app/webviewer-main/header/header.component.html
@@ -2,12 +2,15 @@
     <div class="flex-container-row">
         <div class="top-left-layout">
             <h3>BEAT</h3>
-            <input type="text" id="noduleHistoryRawDataJsonDummy">
         </div>
         <div class="top-right-layout">
             <div style="float: right;">
                 <div class="flex-container-row" style="padding: 0px 6px 0px 0px;">
-
+                    <toolbar-pacs class="top-menu-tools-container"></toolbar-pacs>
+                    <toolbar-users class="top-menu-tools-container"></toolbar-users>
+                    <toolbar-settings class="top-menu-tools-container"></toolbar-settings>
+                    <toolbar-about class="top-menu-tools-container"></toolbar-about>
+                    <toolbar-logout class="top-menu-tools-container"></toolbar-logout>
                     <!-- <toolbar-account-info
                         [isToolbarReady]="isToolbarReady"
                     ></h-toolbar-account-info> -->
