--- a/src/app/webviewer-main/study-table/study-table.component.html
+++ b/src/app/webviewer-main/study-table/study-table.component.html
@@ -3,17 +3,15 @@
               [ngTemplateOutletContext]="{ data: dataSource, main:true }" ></ng-container>
 
 <!-- Study List -->
-<ng-template #main_study let-data="data" let-isMainStudy="main">
-    <mat-paginator [pageSize]=100 [hidePageSize]="true" showFirstLastButtons  style="margin-left: 15px"></mat-paginator>
-    <section style="background-color: black;" class="worklist-study-list mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" class="mat-cell" aria-label="Elements">
-            <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns; let idx=index">
-                <th mat-header-cell *matHeaderCellDef id="{{column}}">{{displayedTitle[idx]}}</th>
-                <td mat-cell *matCellDef="let row">{{row[column]}}</td>
-            </ng-container>
+<mat-paginator [pageSize]="40" [hidePageSize]="true"></mat-paginator>
+<section style="background-color: black;" class="worklist-study-list mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" class="mat-cell" aria-label="Elements">
+        <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns; let idx=index">
+            <th mat-header-cell *matHeaderCellDef id="{{column}}">{{displayedTitle[idx]}}</th>
+            <td mat-cell *matCellDef="let row">{{row[column]}}</td>
+        </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="study-element-row" (dblclick)="onClick($event, row)"></tr>
-        </table>
-    </section>
-</ng-template>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="study-element-row" (dblclick)="clickRow.emit(row)"></tr>
+    </table>
+</section>
