--- a/src/app/webviewer-main/header/toolbar/toolbar-settings/user-settings-dialog.component.html
+++ b/src/app/webviewer-main/header/toolbar/toolbar-settings/user-settings-dialog.component.html
@@ -2,8 +2,7 @@
 <div mat-dialog-content [formGroup]="form">
     <mat-form-field>
         <input matInput
-                placeholder="Course Description"
-            formControlName="description">
+                placeholder="Course Description" formControlName="description">
     </mat-form-field>
     <mat-form-field>
         <mat-select placeholder="Select category" formControlName="category">
@@ -30,7 +29,7 @@
         Save
     </button>
 
-</mat-dialog-actions> -->
+</mat-dialog-actions>  -->
 <!-- <h1 mat-dialog-title>Hi</h1>
 <div mat-dialog-content>
     <p>What's your favorite animal?</p>
@@ -44,4 +43,3 @@
     <button mat-button cdkFocusInitial>Ok</button>
 </div> -->
 
-<p>hello</p>
