--- a/src/app/webviewer-main/report-image-list/report-image-list.component.css
+++ b/src/app/webviewer-main/report-image-list/report-image-list.component.css
@@ -19,13 +19,13 @@ img{
     border: 1.2px solid rgb(126, 126, 126);
     min-width: 3rem;
     max-width: 10rem;
-    min-height: 1.9rem;
+    min-height: 2.2rem;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
     letter-spacing: 0.073em;
     text-transform: uppercase;
-    font-size: 0.9rem;
+    font-size: 0.95rem;
     font-weight: 500;
     background-color: transparent;
     color: rgb(126, 126, 126);
@@ -38,5 +38,8 @@ img{
 }
 
 .btn-container{
+    position: fixed;
+    bottom: 2.5%;
+    right: 1%;
     padding: 1rem 5rem 0 0;
 }
