--- a/src/app/webviewer-main/header/toolbar/toolbar-settings/toolbar-settings.component.css
+++ b/src/app/webviewer-main/header/toolbar/toolbar-settings/toolbar-settings.component.css
@@ -23,3 +23,8 @@
     vertical-align: text-top;
     line-height: 0.6rem;
 }
+
+::ng-deep .mat-dialog-container{
+    background: #2B2B2B;
+    padding: 0;
+}
