--- a/src/app/webviewer-main/header/header.component.css
+++ b/src/app/webviewer-main/header/header.component.css
@@ -94,3 +94,44 @@
     width: 20px;
     height: auto;
 } */
+
+.patient-info {
+    color: #E4A552;
+    font-weight: 700;
+}
+
+.top-menu-info-container {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    -webkit-font-smoothing: antialiased;
+    color: #cecece;
+    font-size: 10px;
+    /* padding: 10px 16px 12px 0px; */
+    font-weight: 400;
+    text-align: right;
+    vertical-align: text-top;
+    line-height: 0.6rem;
+}
+
+.study-upload-error-blinking {
+    animation:study-upload-error-blinking-text 1.2s infinite;
+    font-weight:bold;
+    text-decoration:underline;
+    cursor:pointer;
+    color:red;
+}
+
+/* @keyframes study-upload-error-blinking-text {
+    0%{ color: red; }
+    49%{ color: red; }
+    60%{ color: transparent; }
+    99%{ color:transparent; }
+    100%{ color: red; }
+} */
+
+.flex-item-row-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    padding: 10px 10px 12px 0px;
+}
