--- a/src/app/webviewer-main/header/header.component.html
+++ b/src/app/webviewer-main/header/header.component.html
@@ -5,34 +5,26 @@
         </div>
         <div class="top-right-layout">
             <div style="float: right;">
-                <div class="flex-container-row" style="padding: 0px 6px 0px 0px;">
+                <div class="flex-container-row top-menu-info-container" style="padding: 0px 6px 0px 0px;">
+                    <div class="flex-item-row-info">
+                        <span class="patient-info" style="font-size: 11px;line-height: 0.8rem;cursor: default;">
+                            {{userId}} ({{permission}})
+                        </span><br/>
+                        <!-- <ng-container *ngIf="windowName !== 'monitor01'" >
+                            <span (click)="openSyncFailedStudyModal()" *ngIf="syncFailedStudyExist()" class="study-upload-error-blinking">
+                                Study Upload Error ({{syncFailedStudies.length}})
+                            </span>
+                        </ng-container> -->
+                        <!-- <span *ngIf="syncFailedStudyExist()">&nbsp;&nbsp;&nbsp;</span> -->
+                        <ng-container *ngIf="permission == '' || permission == 'ADMINISTRATOR'">
+                            <span style="cursor: default;">Server Storage ({{diskTotalUsage}}GB/{{diskTotalSpace}}GB)</span>
+                        </ng-container>
+                    </div>
                     <toolbar-pacs class="top-menu-tools-container"></toolbar-pacs>
                     <toolbar-users class="top-menu-tools-container"></toolbar-users>
                     <toolbar-settings class="top-menu-tools-container"></toolbar-settings>
                     <toolbar-about class="top-menu-tools-container"></toolbar-about>
                     <toolbar-logout class="top-menu-tools-container"></toolbar-logout>
-                    <!-- <toolbar-account-info
-                        [isToolbarReady]="isToolbarReady"
-                    ></h-toolbar-account-info> -->
-
-                    <!-- <toolbar-pacs></toolbar-pacs> -->
-                    <!-- <h-toolbar-users
-                        [isToolbarReady]="isToolbarReady"
-                    ></h-toolbar-users>
-                    <h-toolbar-settings></h-toolbar-settings> -->
-                    
-                    <!-- <div class="flex-item-row top-menu-tools-container" (click)="showAboutDialog()">
-                        <div title="About" class="flex-top-menu-tools-icon-item-row-clr">
-                            <clr-icon id="icon_about" shape="event" class="top-menu-tools-icon-button-clr"></clr-icon>
-                        </div>
-                        <div class="flex-top-menu-tools-icon-item-text">About</div>
-                    </div>
-                    <div class="flex-item-row top-menu-tools-container" (click)="showLogoutModal()">
-                        <div title="About" class="flex-top-menu-tools-icon-item-row-clr">
-                            <clr-icon id="icon_logout" shape="logout" class="top-menu-tools-icon-button-clr"></clr-icon>
-                        </div>
-                        <div class="flex-top-menu-tools-icon-item-text">Logout</div>
-                    </div> -->
                 </div>
             </div>
         </div>
