--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%;}
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import "~@angular/cdk/overlay-prebuilt.css";
 body{
+    margin: 0;
     color: #9A9A9A;
     font-weight: 400;
-    font-size: 0.583333rem;
+    /* font-size: 0.583333rem; */
     letter-spacing: normal;
     line-height: 1rem;
     margin-top: 1rem;
     margin-bottom: 0;
-    font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     margin-top: 0 !important;
 }
 
-h1 {
+/* h1 {
     color: #000;
     font-weight: 200;
     font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif;
@@ -38,7 +38,7 @@ h2 {
 }
 
 h3 {
-/***color: #000;*/
+
     color:white;
     font-weight: 200;
     font-family: Metropolis, "Avenir Next", "Helvetica Neue", Arial, sans-serif;
@@ -80,7 +80,7 @@ h6 {
     margin-top: 1rem;
     margin-bottom: 0;
     color: #313131; 
-}
+} */
 
 textarea:focus {
     outline: none !important;
