--- a/src/app/webviewer-main/header/toolbar/toolbar-settings/settings-dialog/settings-dialog.component.css
+++ b/src/app/webviewer-main/header/toolbar/toolbar-settings/settings-dialog/settings-dialog.component.css
@@ -55,21 +55,31 @@
     display: flex;
     flex-direction: column;
 }
-
+.settings .save-test{
+    display: flex;
+    margin: 0.5rem -1rem 0 0;
+    align-items: center;
+    justify-content: flex-end;
+}
 .mat-flat-button{
     border: 1px solid #525252;
     background-color: #212121;
     color: #fff;
     letter-spacing: 1px;
-    margin: 1rem 0.5rem 0 0;
+    /* margin: 1rem 0.5rem 0 0; */
     height: 30px;
     font-size: 0.8rem;
     display: flex;
     align-items: center;
     float: right;
-
+    margin-right: 0.5rem;
 }
 
 .mat-flat-button:hover{
     color: #959BA4;
+}
+
+.settings .save-test .test-result-string{
+    font-size: 13px;
+    font-weight: 600;
 }
