--- a/src/app/webviewer-main/header/toolbar/toolbar-settings/settings-dialog/settings-dialog.component.html
+++ b/src/app/webviewer-main/header/toolbar/toolbar-settings/settings-dialog/settings-dialog.component.html
@@ -35,7 +35,7 @@
                 <div class="input-group">
                     <div class="content">Hospital PACS - AE</div>
                     <input class="pacs pacs-ae" type="text" placeholder="dd" formControlName="ae">
-                    <div class="content">Hospital PACS - Host</div>
+                    <div class="content">Hospital PACS - Client</div>
                     <input class="pacs pacs-user" type="text" placeholder="client" formControlName="ip">
                     <div class="content">Hospital PACS - Port</div>
                     <input class="pacs pacs-port" type="text" placeholder="port" formControlName="port">
