--- a/src/app/webviewer-main/webviewer-main.component.html
+++ b/src/app/webviewer-main/webviewer-main.component.html
@@ -4,13 +4,13 @@
         <ng-container #iconMenu>
             <div class="section-title" style="margin-top: 0.4em;"><i [ngClass]="['fa fa-bars fa-sx']"></i>&nbsp;Study List</div>
         </ng-container>
-        <app-study-table (clickRow)="onDblclick($event)" [isConfirmed]="isConfirmed" [confirmedStudy]="clickedStudy"></app-study-table>
+        <app-study-table (clickRow)="onDblclick($event)" [isConfirmed]="isConfirmed" [confirmedStudy]="clickedStudy" [isSelected]="isSelected"></app-study-table>
     </div>
 
     <div class="report-container">
         <ng-container>
             <div class="section-title" style="margin-top: 0.4em;"><i [ngClass]="['fa fa-bars fa-sx']"></i>&nbsp;BEAT Report</div>
         </ng-container>
-        <app-report-image-list [isAnalyzed]="isAnalyzed" (confirmed)="confirmReport($event)"></app-report-image-list>
+        <app-report-image-list [isAnalyzed]="isAnalyzed" [isReceived]="isReceived" (confirmed)="confirmReport($event)"></app-report-image-list>
     </div>
 </div>
