--- a/src/app/webviewer-main/header/header.component.html
+++ b/src/app/webviewer-main/header/header.component.html
@@ -1,6 +1,7 @@
 <div class="flex-item top-layout">
     <div class="flex-container-row">
         <div class="top-left-layout">
+            <img width="2.3%" height="60%" style="padding: 10px;" src="assets/icons/LuCAS_symbol_blue.png">
             <h3>BEAT</h3>
         </div>
         <div class="top-right-layout">
