--- a/src/app/webviewer-main/study-table/study-table.component.css
+++ b/src/app/webviewer-main/study-table/study-table.component.css
@@ -57,6 +57,9 @@ tr.study-element-row {
 .mat-row:hover{
     background-color: #3d3d3d;
 }
+.selectedRow{
+    background-color: #6d4c41;
+}
 /* tr.study-element-row:active {
     background: seagreen;
 } */
@@ -72,8 +75,8 @@ table.mat-table {
 .mat-column-patient_id {
     word-wrap: break-word !important;
     white-space: unset !important;
-    flex: 0 0 11% !important;
-    width: 11% !important;
+    flex: 0 0 13% !important;
+    width: 13% !important;
     overflow-wrap: break-word;
     word-wrap: break-word;
     overflow: hidden;
@@ -89,8 +92,8 @@ table.mat-table {
 .mat-column-patient_name {
     word-wrap: break-word !important;
     white-space: unset !important;
-    flex: 0 0 18% !important;
-    width: 18% !important;
+    flex: 0 0 20.5% !important;
+    width: 20.5% !important;
     overflow-wrap: break-word;
     word-wrap: break-word;
     overflow: hidden;
@@ -104,13 +107,13 @@ table.mat-table {
 }
 
 .mat-column-sex {
-    flex: 0 0 5% !important;
-    width: 5% !important;
+    flex: 0 0 6% !important;
+    width: 6% !important;
 }
 
 .mat-column-results, .mat-column-volumes {
-    flex: 0 0 7% !important;
-    width: 7% !important;
+    flex: 0 0 3% !important;
+    width: 3% !important;
 }
 
 .mat-column-age {
@@ -118,8 +121,8 @@ table.mat-table {
     width: 6% !important;
 }
 .mat-column-study_date, .mat-column-analysis_date {
-    flex: 0 0 16% !important;
-    width: 16% !important;
+    flex: 0 0 18% !important;
+    width: 18% !important;
 }
   
 
@@ -154,4 +157,12 @@ table.mat-table {
     width: 22px !important;
     fill: lightgray !important; 
     padding-left: 10px;
+}
+
+.mat-column-status .reviewedStatus{
+    color: cornflowerblue;
+}
+
+th.mat-header-cell:last-of-type, td.mat-cell:last-of-type, td.mat-footer-cell:last-of-type{
+    padding-right: 0;
 }
