--- a/src/app/webviewer-main/study-table/study-table.component.html
+++ b/src/app/webviewer-main/study-table/study-table.component.html
@@ -8,10 +8,10 @@
     <table mat-table matSort [dataSource]="dataSource" #sort="matSort" class="mat-cell" aria-label="Elements">
         <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns; let idx=index">
             <th mat-header-cell *matHeaderCellDef mat-sort-header id="{{column}}">{{displayedTitle[idx]}}</th>
-            <td mat-cell *matCellDef="let row">{{row[column]}}</td>
+            <td mat-cell *matCellDef="let row" [ngClass]="{'reviewedStatus': row.status === 'Reviewed'}">{{row[column]}}</td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true" ></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="study-element-row" (dblclick)="clickRow.emit(row)"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="study-element-row" (dblclick)="clickRow.emit(row)" [ngClass]="getBackground(row)"></tr>
     </table>
 </section>
