--- a/src/app/webviewer-main/report-image-list/report-image-list.component.html
+++ b/src/app/webviewer-main/report-image-list/report-image-list.component.html
@@ -18,12 +18,12 @@
 </ng-template>
 
 <ng-template [ngIf]="isAnalyzed" class="img-btn-container" appMousewheelEvent>
-    <div class="btn-container">
+    <div class="btn-container2">
         <button class="custom-btn" (click)="confirm()">
             <i class="fa fa-check-circle" aria-hidden="true" style="color: green;"></i>&nbsp;Confirm
         </button>
     </div>
-    <div class="report_image">
+    <div class="report_image2">
         <!-- <img src="assets/report_test_210216/1.jpg"> -->
         <img src="{{report_img}}">
     </div>
